--- a/PassGen/MainWindow.xaml
+++ b/PassGen/MainWindow.xaml
@@ -13,5 +13,6 @@
         <Label x:Name="Current" Content="1" Height="30" Width="100" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,0,210" HorizontalContentAlignment="Center"/>
         <CheckBox x:Name="Digits" Content="Enable digits" HorizontalAlignment="Center" Margin="0,0,0,250" VerticalAlignment="Center"/>
         <CheckBox x:Name="Symbols" Content="Enable special symbols" HorizontalAlignment="Center" Margin="0,0,0,300" VerticalAlignment="Center"/>
+        <Button Content="Copy" HorizontalAlignment="Center" Margin="0,230,0,0" VerticalAlignment="Center" Width="50" Click="Button_Click_1"/>
     </Grid>
 </Window>
