--- a/PassGen/MainWindow.xaml
+++ b/PassGen/MainWindow.xaml
@@ -3,16 +3,15 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:PassGen"
         mc:Ignorable="d"
         Title="Password Generator" Height="450" Width="800">
     <Grid>
-        <TextBox x:Name="Result" HorizontalAlignment="Center" Height="30" Margin="0,150,0,0" TextWrapping="Wrap" Text="Result Password" VerticalAlignment="Center" Width="375" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
-        <Button HorizontalAlignment="Center" Height="40" Content="Generate" VerticalAlignment="Center" Width="100" Margin="0, 0, 0, 0" Click="Button_Click"/>
-        <Slider x:Name="PLength" HorizontalAlignment="Center" Height="30" Margin="0,0,0,150" VerticalAlignment="Center" Width="400" ValueChanged="PLength_ValueChanged" TickFrequency="1" IsSnapToTickEnabled="True"/>
-        <Label x:Name="Current" Content="1" Height="30" Width="100" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,0,210" HorizontalContentAlignment="Center"/>
-        <CheckBox x:Name="Digits" Content="Enable digits" HorizontalAlignment="Center" Margin="0,0,0,250" VerticalAlignment="Center"/>
-        <CheckBox x:Name="Symbols" Content="Enable special symbols" HorizontalAlignment="Center" Margin="0,0,0,300" VerticalAlignment="Center"/>
-        <Button Content="Copy" HorizontalAlignment="Center" Margin="0,230,0,0" VerticalAlignment="Center" Width="50" Click="Button_Click_1"/>
+        <TextBox x:Name="ResultTextBox" HorizontalAlignment="Center" Height="30" Margin="0,150,0,0" TextWrapping="Wrap" Text="Result Password" VerticalAlignment="Center" Width="375" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+        <Button x:Name="GenerateButton" HorizontalAlignment="Center" Height="40" Content="Generate" VerticalAlignment="Center" Width="100" Margin="0, 0, 0, 0" Click="GenerateButtonClick"/>
+        <Slider x:Name="PasswordLengthSlider" HorizontalAlignment="Center" Height="30" Margin="0,0,0,150" VerticalAlignment="Center" Width="400" ValueChanged="PasswordLengthSliderValueChanged" TickFrequency="1" IsSnapToTickEnabled="True" Minimum="1" Maximum="40" Value="10"/>
+        <Label x:Name="CurrentPasswordLengthLabel" Content="1" Height="30" Width="100" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,0,210" HorizontalContentAlignment="Center"/>
+        <CheckBox x:Name="UseDigitsCheckBox" Content="Enable digits" HorizontalAlignment="Center" Margin="0,0,0,250" VerticalAlignment="Center"/>
+        <CheckBox x:Name="UseSpecialSymbolsCheckBox" Content="Enable special symbols" HorizontalAlignment="Center" Margin="0,0,0,300" VerticalAlignment="Center"/>
+        <Button x:Name="CopyButton" Content="Copy" HorizontalAlignment="Center" Margin="0,230,0,0" VerticalAlignment="Center" Width="50" Click="CopyButtonClick"/>
     </Grid>
 </Window>
